--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <!-- Search Section -->
         <section class="search-section">
             <div class="search-container">
-                <input type="text" id="search-input" placeholder="Cari resep...">
+                <input type="text" id="search-input" placeholder="Kamu mau makan apa?">
                 <button id="search-btn">Cari</button>
             </div>
             <div class="ingredients-filter">
-                <input type="text" id="ingredient-input" placeholder="Tambahkan bahan...">
+                <input type="text" id="ingredient-input" placeholder="Bahan apa yang kamu punya">
                 <button id="add-ingredient-btn">Tambah</button>
                 <div class="ingredients-tags" id="ingredients-tags"></div>
             </div>
